<resources>
    <string name="app_name">Study Quizmaker</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="subject_name">Subject name</string>
    <string name="subject_description">Subject description</string>
    <string name="add">Add</string>
    <string name="msg_err_subject_name_exists_already">There is another subject with the same name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_confirmation">Delete confirmation</string>
    <string name="msg_delete_confirmation_subject">Are you sure you want to delete the following subject?</string>
    <string name="name">Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="topics">Topics</string>
    <string name="topic">Topic</string>
    <string name="subjects">Subjects</string>
    <string name="topic_name">Topic name</string>
    <string name="topic_description">Topic description</string>
    <string name="msg_err_topic_name_exists_already">There is another topic with the same name</string>
    <string name="msg_delete_confirmation_topic">Are you sure you want to delete the following topic?</string>
    <string name="tests">Tests</string>
    <string name="test">Test</string>
    <string name="test_name">Test name</string>
    <string name="test_description">Test description</string>
    <string name="msg_err_test_name_exists_already">There is another test with the same name</string>
    <string name="msg_delete_confirmation_test">Are you sure you want to delete the following test?</string>
    <string name="manage_questions">Manage questions</string>
    <string name="view_scores">View scores</string>
    <string name="start">Start</string>
    <string name="amount_of_questions">Amount of questions</string>
    <string name="questions">Questions</string>
    <string name="questions_multiple_choice">Multiple choice</string>
    <string name="questions_simple">Simple questions</string>
    <string name="questions_true_or_false">True or false</string>
    <string name="questions_multiple_options">Multiple options</string>
    <string name="score_total">"Score: "</string>
    <string name="answer">Answer</string>
    <string name="title">Title</string>
    <string name="msg_err_question_title_exists_already">There is another question with the same title</string>
    <string name="max_score">Maximum score of other questions</string>
    <string name="score">Score</string>
    <string name="msg_delete_confirmation_question">Are you sure you want to delete the following question?</string>
    <string name="msg_available_in_future_version">Will be available on a future version. Wait for release</string>
    <string name="simple_question">Simple question</string>
    <string name="next_question">Next question</string>
    <string name="finish">Finish</string>
    <string name="solved">Solved</string>
    <string name="question">Question</string>
    <string name="view_answer">View answer</string>
    <string name="hide_answer">Hide answer</string>
    <string name="answer_score">Answer score</string>
    <string name="previous_question">Previous question</string>
    <string name="exit">Exit</string>
    <string name="msg_err_need_to_add_questions_first">You need to add questions before starting the test</string>
    <string name="test_results">Test results</string>
    <string name="scored">Scored</string>
    <string name="questions_answered">Questions answered</string>
    <string name="pick_a_question">Pick a question</string>
    <string name="answered">Answered</string>
    <string name="unanswered">Unanswered</string>
    <string name="not_active">Not active</string>
    <string name="pick">Pick</string>
    <string name="finish_test">Finish test</string>
    <string name="msg_confirmation_finish_test">Are you sure you want to end this test?</string>
    <string name="test_runs">Test runs</string>
    <string name="msg_delete_confirmation_testrun">Are you sure you want to delete the selected run?</string>
    <string name="date_started_on">Started on</string>
    <string name="duration">Duration</string>
    <string name="answer_false">False answer</string>
    <string name="answer_true">True answer</string>
    <string name="unsetted">Unsetted</string>
    <string name="is_false">False</string>
    <string name="is_true">True</string>
    <string name="right_answer">Right answer</string>
    <string name="confirm_scores">Confirm scores</string>
    <string name="answered_question">Answered</string>
    <string name="add_answer_option">Add answer option</string>
    <string name="add_option">Add option</string>
    <string name="clear_all_checks">Clear all</string>
    <string name="error">Error</string>
    <string name="response_question_mc">Multiple choice response</string>
    <string name="response_question_single">Simple question response</string>
    <string name="response_question_tf">True or false question response</string>
    <string name="response_question_mo">Multiple options response</string>
    <string name="color_gray">Gray</string>
    <string name="color_red">Red</string>
    <string name="color_orange">Orange</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_green_water">Water green</string>
    <string name="color_light_blue">Light blue</string>
    <string name="color_blue">Blue</string>
    <string name="color_violet">Violet</string>
    <string name="color_pink">Pink</string>
    <string name="color_fucsia">Fucsia</string>
    <string name="icon_color">Icon color</string>
</resources>