<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2pt"
    android:padding="2pt">

    <TextView
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5pt"
        android:layout_marginLeft="5pt"
        android:text="@string/score"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar_score"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6pt"
        android:layout_marginLeft="6pt"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_score"
        app:layout_constraintEnd_toStartOf="@+id/imgbtn_delete"
        app:layout_constraintStart_toEndOf="@+id/txt_score"
        app:layout_constraintTop_toTopOf="@+id/txt_score" />

    <ImageView
        android:id="@+id/imgbtn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/txt_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_score"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/date_started_on"
        app:layout_constraintStart_toStartOf="@+id/txt_score"
        app:layout_constraintTop_toBottomOf="@+id/txt_score" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="@+id/txt_score"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/txt_started_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/txt_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="@+id/txt_started_on"
        app:layout_constraintTop_toTopOf="@+id/textView18" />
</androidx.constraintlayout.widget.ConstraintLayout>